@@ -1868,7 +1868,7 @@ floatFromVal (value * val)
 /* ulFromVal - value to unsigned long conversion                    */
 /*------------------------------------------------------------------*/
 unsigned long
-ulFromVal (value *val)
+ulFromVal (const value *val)
 {
   if (!val)
     return 0;
