@@ -127,7 +127,7 @@ value *charVal (const char *);
 value *symbolVal (symbol *);
 void printVal (value *);
 double floatFromVal (value *);
-unsigned long ulFromVal (value *);
+unsigned long ulFromVal (const value *);
 unsigned long long ullFromVal (value *);
 
 /* convert a fixed16x16 type to double */
